# mcp-google-search

./: README.md  forgex-mcp-server.sh  forgex_mcp_server.py  google-search-mcp-server.sh  google_search_server.py  pyproject.toml  requirements.txt
google_search_mcp_server.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-forgex/: pyvenv.cfg
mcp-google-search/: pyvenv.cfg
mcp-google-search-new/: pyvenv.cfg
