# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgex-mcp-server"
version = "0.1.0"
description = "MCP Server for forgex Integration"
authors = [
    {name = "Bharanitharan R", email = "bharani3ran@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "googlesearch-python>=1.2.3",
]

[project.scripts]
forgex-mcp-server = "forgex-mcp-server:main"

[project.urls]
Homepage = "https://github.com/yourusername/google-search-mcp-server"
Repository = "https://github.com/yourusername/google-search-mcp-server"

[tool.setuptools]
py-modules = ["forgex-mcp-server"]
